# mpns

./: Book18.xlsx  Book21.xlsx  DB.xlsx  _stop_stats.json  a.py  config.ini  excel.py  hello.py  main.py  pyproject.toml  settings_app.json  spa_scraper-0.1.0-cp313-cp313-win_amd64.whl  spa_scraper_pyo3-0.1.0-cp313-cp313-win_amd64.whl  tabledata_20250320_040037.csv
app/: __init__.py  app.py  mpns.py
assets/: entry_query.html  loss_tree_shift_1.html  loss_tree_shift_2.html  loss_tree_shift_3.html  loss_tree_shift_4.html  loss_tree_shift_5.html  loss_tree_shift_6.html  no_pdt.html  page-machine.html  page-result.html  page-stop.html  query.html
output/: Book1.xlsx  DB.xlsx  config.ini
python_spa/: __init__.py  losstree.py  planned.py  product.py  quality_loss.py  rate_loss.py  stop_stats.py
src/: __init__.py
src/core/: logic.py
src/core/python_spa/: line_performance.py  losstree.py  planned.py  product.py  quality_loss.py  rate_loss.py  spa_struct.py  stop_stats.py  time_range.py  unplanned.py
src/gui/: mainpage.py  qr.py  sidebar.py  target_editor.py  text_editor.py  toast.py  views.py
src/utils/: constants.py  csvhandle.py  helpers.py
