[project]
name = "mpns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "async-tkinter-loop>=0.9.3",
    "auto-py-to-exe>=2.46.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests-ntlm>=1.3.0",
    "ttkbootstrap>=1.10.1",
]

[tool.ruff.lint]
ignore = ["F401", "F403", 'F405', 'E501']
