[project]
name = "mpns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "async-tkinter-loop>=0.9.3",
    "auto-py-to-exe>=2.46.0",
    "beautifulsoup4>=4.13.3",
    "configparser>=7.2.0",
    "httpx>=0.28.1",
    "httpx-ntlm>=1.4.0",
    "lxml>=5.3.2",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "qrcode>=8.1",
    "requests-ntlm>=1.3.0",
    "tabulate>=0.9.0",
    "tkinterpdfviewer>=0.2",
    "ttkbootstrap>=1.10.1",
    "ttkwidgets>=0.13.0",
]

[tool.ruff.lint]
ignore = ["F401", "F403", 'F405', 'E501']
